# pydantic-mini

./: .flake8  README.md  pyproject.toml  requirements-build.txt  requirements-tests.txt
.github/workflows/: coverage.yml  python-publish.yml  python_package.yml
src/: test.py
src/pydantic_mini/: __init__.py  base.py  decorators.py  fields.py  formatters.py  typing.py  utils.py
src/tests/: test_base.py
tests/: test_base.py  test_formatter.py  test_typing.py
