[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "pydantic_mini"
requires-python = ">=3.8"
authors = [
    {name = "nshaibu", email = "nafiushaibu1@gmail.com"},
]
description="Dataclass with validation"
keywords=["pydantic-mini", "Schema", "ORM", "dataclss", "pydantic"]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "typing-extensions==4.12.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]